# Laboratoare-TAP

./: README.md
Lab6/: Lab6.sln
Lab6/Lab6/: Angajat.cpp  Angajat.h  Lab6.cpp  Lab6.vcxproj  Lab6.vcxproj.filters  Persoana.cpp  Persoana.h  Profesor.cpp  Profesor.h  Student.cpp  Student.h
Lab6/Lab6/x64/Debug/: vc143.idb
Lab6/Lab6/x64/Debug/Lab6.tlog/: Lab6.lastbuildstate
Lab8/: CMakeLists.txt  main.cpp
Laboratorul5/: Angajat.cpp  Angajat.h  Manager.cpp  Manager.h  Punct2d.cpp  Punct2d.h  Punct3D.cpp  Punct3D.h  main.cpp
laborator3/: CMakeLists.txt  Carte.cpp  Carte.h  README.md  main.cpp  main2.cpp
untitled1/: CMakeLists.txt  Fractie.cpp  Fractie.h  main.cpp
